welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:4: error: not found: value flag
  flag = 0
  ^golomb:5: error: ambiguous reference to overloaded definition,
both method to in class RichInt of type (end: Int, step: Int)scala.collection.immutable.Range.Inclusive
and  method to in class RichInt of type (end: Int)scala.collection.immutable.Range.Inclusive
match expected type ?
  for (k <- 0 to ) {
              ^golomb:7: error: not found: value flag
    for (j <- flag to (flag+nb)) {
              ^golomb:7: error: not found: value flag
    for (j <- flag to (flag+nb)) {
                       ^golomb:10: error: not found: value flag
    flag = tab(k)
    ^