welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  var tab = new Array[Int](num)
  tab(0) = 1
  flag = 0
  for (k <- 0 to ) {
    var nb = tab(k)
    for (j <- flag to (flag+nb)) {
      tab(j) = k
    }
    flag = tab(k)
  }
}